; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/syscons/rain/extr_rain_saver.c_rain_update.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/syscons/rain/extr_rain_saver.c_rain_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rain_pal = common dso_local global i32* null, align 8
@MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @rain_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rain_update(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** @rain_pal, align 8
  %6 = load i32, i32* @MAX, align 4
  %7 = call i64 @BLUE(i32 %6)
  %8 = getelementptr inbounds i32, i32* %5, i64 %7
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* @MAX, align 4
  store i32 %10, i32* %3, align 4
  br label %11

11:                                               ; preds = %25, %1
  %12 = load i32, i32* %3, align 4
  %13 = icmp sgt i32 %12, 1
  br i1 %13, label %14, label %28

14:                                               ; preds = %11
  %15 = load i32*, i32** @rain_pal, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sub nsw i32 %16, 1
  %18 = call i64 @BLUE(i32 %17)
  %19 = getelementptr inbounds i32, i32* %15, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** @rain_pal, align 8
  %22 = load i32, i32* %3, align 4
  %23 = call i64 @BLUE(i32 %22)
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  store i32 %20, i32* %24, align 4
  br label %25

25:                                               ; preds = %14
  %26 = load i32, i32* %3, align 4
  %27 = add nsw i32 %26, -1
  store i32 %27, i32* %3, align 4
  br label %11

28:                                               ; preds = %11
  %29 = load i32, i32* %4, align 4
  %30 = load i32*, i32** @rain_pal, align 8
  %31 = call i64 @BLUE(i32 1)
  %32 = getelementptr inbounds i32, i32* %30, i64 %31
  store i32 %29, i32* %32, align 4
  %33 = load i32*, i32** %2, align 8
  %34 = load i32*, i32** @rain_pal, align 8
  %35 = call i32 @vidd_load_palette(i32* %33, i32* %34)
  ret void
}

declare dso_local i64 @BLUE(i32) #1

declare dso_local i32 @vidd_load_palette(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
